--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -12,30 +12,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Install system dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y doxygen graphviz python3-venv
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python virtual environment
-      run: |
-        python3 -m venv .venv
-        .venv/bin/pip install --upgrade pip
-        .venv/bin/pip install mkdocs-material
-    
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Run Doxygen
-      run: doxygen Doxyfile
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mkdocs-material mkdoxy
 
-    - name: Generate Markdown with mkdoxy
-      run: |
-        mkdir -p docs/api
-        /opt/mkdocs-venv/bin/mkdoxy \
-          --doxygen-output docs/doxygen/xml \
-          --output docs/api \
-          --project-name "Documentazione Progetto C" \
-          --create-toc
+      #- name: Run Doxygen
+      #  run: doxygen Doxyfile
+
+      - name: Generate Markdown from doxygen documentation with mkdoxy
+        run: |
+            mkdir -p docs/api
+            mkdoxy \
+            --doxygen-output docs/doxygen/xml \
+            --output docs/api \
+            --project-name "Documentazione Progetto C" \
+            --create-toc
+      - name: Deploy all documentation with mkdocs
+        run: mkdocs gh-deploy --force
