--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material mkdoxy
-
+          sudo apt-get install doxygen graphviz
+          
       #- name: Run Doxygen
       #  run: doxygen Doxyfile
 
