--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -18,19 +18,22 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
+        
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material mkdoxy
           sudo apt-get install doxygen graphviz
-          
+          echo "${{ runner.tool_cache }}/Python/$(python --version | cut -d' ' -f2)*/bin" >> $GITHUB_PATH
+
+      
+      #- name: Add Python to PATH
+      #  run: echo "${{ runner.tool_cache }}/Python/3.10*/bin" >> $GITHUB_PATH
       #- name: Run Doxygen
       #  run: doxygen Doxyfile
 
       - name: Generate Markdown from doxygen documentation with mkdoxy
+        continue-on-error: true
         run: |
             mkdir -p docs/api
             mkdoxy \
@@ -38,5 +41,6 @@ jobs:
             --output docs/api \
             --project-name "Documentazione Progetto C" \
             --create-toc
+      
       - name: Deploy all documentation with mkdocs
         run: mkdocs gh-deploy --force
