--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material mkdoxy
+          pip install mkdocs-material mkdoxy mkdocs-material[imaging]
           sudo apt-get install doxygen graphviz
           echo "${{ runner.tool_cache }}/Python/$(python --version | cut -d' ' -f2)*/bin" >> $GITHUB_PATH
 
