tolti temporaneamente riferimenti alle immagini

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,8 +15,8 @@ copyright: Copyright © 2025 Red Propulsion
 theme:
   name: material
   language: en
-  logo: assets/logo.png
-  favicon: assets/logo.png
+  #logo: assets/logo.png
+  #favicon: assets/logo.png
   features:
     - content.code.copy
     - content.tabs
@@ -96,5 +96,5 @@ markdown_extensions:
 
 extra:
   social:
-    - icon: fontawesome/brands/mastodon 
-      link: https://fosstodon.org/@squidfunk
+    - icon: fontawesome/brands/instagram 
+      link: https://instagram.com/red_propulsion/
