--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -18,19 +18,32 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        
-      - name: Install dependencies
+
+      - name: Cache Python dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material mkdoxy mkdocs-material[imaging]
-          sudo apt-get install doxygen graphviz
-          echo "${{ runner.tool_cache }}/Python/$(python --version | cut -d' ' -f2)*/bin" >> $GITHUB_PATH
 
-      
-      #- name: Add Python to PATH
-      #  run: echo "${{ runner.tool_cache }}/Python/3.10*/bin" >> $GITHUB_PATH
-      #- name: Run Doxygen
-      #  run: doxygen Doxyfile
+      - name: Cache system packages
+        uses: actions/cache@v3
+        with:
+          path: /var/cache/apt
+          key: ${{ runner.os }}-apt-${{ hashFiles('**/apt-packages.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y doxygen graphviz
 
       - name: Generate Markdown from doxygen documentation with mkdoxy
         continue-on-error: true
@@ -43,4 +56,6 @@ jobs:
             --create-toc
       
       - name: Deploy all documentation with mkdocs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mkdocs gh-deploy --force
