--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -20,10 +20,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
 
       - name: Cache Python dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -34,9 +36,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material mkdoxy mkdocs-material[imaging]
+          pip install mkdocs-mermaid2-plugin markdown-callouts
 
       - name: Cache system packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: /var/cache/apt
           key: ${{ runner.os }}-apt-${{ hashFiles('**/apt-packages.txt') }}
@@ -59,6 +62,4 @@ jobs:
             --create-toc
       
       - name: Deploy all documentation with mkdocs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mkdocs gh-deploy --force
