--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,13 @@ nav:
 
 markdown_extensions:
   - pymdownx.highlight
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      # make exceptions to highlighting of code:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:mermaid2.fence_mermaid_custom
+
   - def_list
   - toc:
       permalink: True
