--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,5 +126,5 @@ extra:
       link: https://instagram.com/red_propulsion/
 
 extra_javascript:
-  - javascripts/mathjax.js
+#  - javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
