--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,3 +128,6 @@ extra:
 extra_javascript:
 #  - javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+#extra_css:
+ # - assets/css/style.css
