--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,7 +126,8 @@ extra:
       link: https://instagram.com/red_propulsion/
 
 extra_javascript:
-#  - javascripts/mathjax.js
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 #extra_css:
